Added notice for the user to scroll + Added button that will trigger gravity for the items + General styles

--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <link rel="stylesheet" href="assets/styles/style.css">
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8"/>
+  <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Vite App</title>
+  <link rel="stylesheet" href="assets/styles/style.css">
+</head>
+<body>
 
-    <canvas id="background"></canvas>
+<canvas id="background"></canvas>
 
 
-    <main>
+<main>
+  <div class="watermark scrollAdvice">
+    Psst. Scroll down
+  </div>
+  <button id="activateGravityBtn">
+    Let the cereal fall begin
+  </button>
+</main>
 
-    </main>
-
-    <script type="module" src="/assets/scripts/main.js"></script>
-  </body>
+<script type="module" src="/assets/scripts/main.js"></script>
+</body>
 </html>
